--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,14 @@
+# Dockerfile
 FROM node:25-alpine3.21
 
 WORKDIR /app
 
-ARG VITE_BACKEND_URL
-ENV VITE_BACKEND_URL=$VITE_BACKEND_URL
-
 COPY package*.json .
-
 RUN npm install
 
 COPY . .
 
-RUN npm run build
+RUN npm run build 
 
 EXPOSE 3000
 
