--- a/frontend.yaml
+++ b/frontend.yaml
@@ -22,6 +22,8 @@ spec:
           env:
             - name: VITE_API_URL
               value: http://backend-svc:3001
+            - name: test_1
+              value: test_1
 ---
 apiVersion: v1
 kind: Service
