--- a/postgres.yaml
+++ b/postgres.yaml
@@ -1,4 +1,17 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postgres-pv
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-storage
+  hostPath:
+    path: /mnt/data/postgres
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
@@ -8,6 +21,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  storageClassName: local-storage
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -39,7 +53,7 @@ spec:
               value: todos
           volumeMounts:
             - name: postgres-storage
-              mountPath: /var/lib/postgresql/18/docker
+              mountPath: /var/lib/postgresql/data
       volumes:
         - name: postgres-storage
           persistentVolumeClaim:
