--- a/postgres.yaml
+++ b/postgres.yaml
@@ -53,7 +53,7 @@ spec:
               value: todos
           volumeMounts:
             - name: postgres-storage
-              mountPath: /var/lib/postgresql/data
+              mountPath: /var/lib/postgresql
       volumes:
         - name: postgres-storage
           persistentVolumeClaim:
