--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
     REPO_BACKEND = 'k8s-backend'
     REPO_FRONTEND = 'k8s-frontend'
     IMAGE_TAG = "${env.BUILD_NUMBER}" // o usa `git rev-parse --short HEAD`
-    YAML_REPO = 'https://github.com/CesarClaros49/k8s-manifests'
+    YAML_REPO = 'git@github.com:CesarClaros49/k8s-manifests.git'
   }
 
   stages {
@@ -86,4 +86,5 @@ pipeline {
     }
   }
 }
+
 
