--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         script {
           git 'https://github.com/CesarClaros49/sample-docker'
           dir('k8s-yamls') {
-            git branch: 'main', credentialsId: 'github-creds', url: "${YAML_REPO}"
+            git branch: 'main', url: "${YAML_REPO}"
           }
         }
       }
@@ -63,29 +63,32 @@ pipeline {
     }
 
     stage('Update k8s manifests repo') {
-      steps {
-        dir('k8s-yamls') {
-          script {
-            // reemplaza la versión en los YAML
-            sh """
-              sed -i 's|clarozzz/k8s-backend:.*|clarozzz/k8s-backend:${IMAGE_TAG}|g' *.yaml
-              sed -i 's|clarozzz/k8s-frontend:.*|clarozzz/k8s-frontend:${IMAGE_TAG}|g' *.yaml
-            """
+  steps {
+    dir('k8s-yamls') {
+      container('docker') {
+        withCredentials([usernamePassword(credentialsId: 'github-creds', usernameVariable: 'GIT_USER', passwordVariable: 'GIT_PASS')]) {
+          sh """
+            git config user.email "jenkins@ci.local"
+            git config user.name "Jenkins CI"
 
-            // commit y push de los cambios
-            sh """
-              git config user.email "jenkins@ci.local"
-              git config user.name "Jenkins CI"
-              git add .
-              git commit -m "Update images to tag ${IMAGE_TAG}"
-              git push origin main
-            """
-          }
+            sed -i 's|clarozzz/k8s-backend:.*|clarozzz/k8s-backend:${IMAGE_TAG}|g' *.yaml
+            sed -i 's|clarozzz/k8s-frontend:.*|clarozzz/k8s-frontend:${IMAGE_TAG}|g' *.yaml
+
+            git add .
+            git commit -m "Update images to tag ${IMAGE_TAG}" || echo "No changes to commit"
+
+            git remote set-url origin https://${GIT_USER}:${GIT_PASS}@github.com/CesarClaros49/k8s-manifests.git
+            git push origin main
+          """
         }
       }
     }
   }
 }
+
+  }
+}
+
 
 
 
